force-app/main/default/objects/BICSegmentRelation__c/BICSegmentRelation__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom Setting to determinate the relation between BIC and Segmentation from an Account to show the different fees of a payment.</description>
    <label>BICSegmentRelation</label>
</CustomObject>