force-app/main/default/objects/BICSegmentRelation__c/fields/BIC__c.field-meta.xml
<CustomField>
    <fullName>BIC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BIC</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>