force-app/main/default/objects/BICSegmentRelation__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Segment</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>