force-app/main/default/objects/BICSegmentRelation__c/fields/showFeeValue__c.field-meta.xml
<CustomField>
    <fullName>showFeeValue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>showFeeValue</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>